--- a/nodeJSApp/views/partials/sidebar.hbs
+++ b/nodeJSApp/views/partials/sidebar.hbs
@@ -3,6 +3,6 @@
     <div class="list-group list-group-flush">
         <a href="/" class="list-group-item list-group-item-action bg-light">Inicio</a>
         <a href="/productos" class="list-group-item list-group-item-action bg-light">Productos</a>
-        {{!<a href="#" class="list-group-item list-group-item-action bg-light">Ordenes</a>}}
+        <a href="/ordenes" class="list-group-item list-group-item-action bg-light">Ordenes</a>
     </div>
 </div>
